# lumbergh

./: .gitignore  CLAUDE.md  LICENSE  README.md  bootstrap.sh  build.sh  lint.sh  mkdocs.yml  release.sh  start.sh
.github/workflows/: ci.yml  pages.yml  release-alpha.yml  release-stable.yml
backend/: PYPI_README.md  constants.py  db_utils.py  diff_cache.py  file_utils.py  git_utils.py  idle_detector.py  idle_monitor.py  main.py  models.py  pyproject.toml  session_manager.py  start.ps1  start.sh  tmux_pty.py
backend/ai/: __init__.py  prompts.py  providers.py
backend/lumbergh/: __init__.py  __main__.py  auth.py  backup_scheduler.py  cli.py  cloud_client.py  constants.py  db_utils.py  diff_cache.py  file_utils.py  git_utils.py  idle_detector.py  idle_monitor.py  main.py  message_buffer.py  models.py  providers.py  session_manager.py  tailscale.py  telemetry.py  tmux_pty.py  tunnel.py  version_check.py
backend/lumbergh/ai/: __init__.py  commit_message.py  prompts.py  providers.py  session_summary.py
backend/lumbergh/routers/: __init__.py  ai.py  backup.py  cloud.py  notes.py  sessions.py  settings.py  shared.py  tmux.py
backend/lumbergh/tests/: __init__.py  conftest.py  test_auth.py  test_db_utils.py  test_endpoints.py  test_file_utils.py  test_git_utils.py  test_idle_detector.py  test_idle_monitor.py  test_session_manager.py  test_tmux_pty.py  test_windows_kill.py
backend/routers/: ai.py  notes.py  sessions.py  settings.py  shared.py
backend/tests/: test_db_utils.py  test_endpoints.py  test_git_utils.py
contrib/: README.md
contrib/systemd/: lumbergh.env.example  lumbergh.service
docs/: PRD.md  ROADMAP.md  architecture.md  implementation_roadmap.md  index.html  release-workflow.md
docs-src/: architecture.md  index.md  troubleshooting.md
docs-src/getting-started/: development.md  index.md  prerequisites.md
docs-src/guides/: ai-providers.md  dashboard.md  file-browser.md  git-operations.md  mobile.md  prompt-templates.md  sessions.md  shared-files.md  terminal.md  todos-and-notes.md
docs-src/javascripts/: analytics.js
docs-src/reference/: configuration.md  data-storage.md
docs/features/: the-one.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  start.ps1  start.sh  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: AISettingsTab.tsx  BranchPicker.tsx  CloudSettings.tsx  CreateSessionModal.tsx  CsvViewer.tsx  DiffViewer.tsx  DirectoryPicker.tsx  FileBrowser.tsx  GeneralSettings.tsx  MarkdownViewer.tsx  MentionText.tsx  PWAUpdatePrompt.tsx  PromptDropdown.tsx  PromptMentionInput.tsx  PromptTemplates.tsx  QuickInput.tsx  ResizablePanes.tsx  ScratchPromoteBanner.tsx  Scratchpad.tsx  SecuritySettings.tsx  SessionCard.tsx  SessionCardActions.tsx  SessionCardBadges.tsx  SessionCardEditForm.tsx  SessionNavigatorDots.tsx  SessionSummaryBanner.tsx  SettingsModal.tsx  SharedFiles.tsx  TelemetryOptIn.tsx  Terminal.tsx  TerminalHeader.tsx  TodoItem.tsx  TodoList.tsx  VerticalResizablePanes.tsx  WelcomeCard.tsx  aiProviders.ts
frontend/src/components/create-session/: AgentProviderSelect.tsx  ExistingRepoForm.tsx  ModeToggle.tsx  NewRepoForm.tsx
frontend/src/components/diff/: BranchActions.tsx  BranchSelector.tsx  CommitForm.tsx  CommitList.tsx  FileDiff.tsx  FileList.tsx  FileListHeader.tsx  RemoteStatusView.tsx  index.ts  types.ts  useGitActions.ts  utils.ts
frontend/src/components/graph/: GitGraph.tsx  GitTab.tsx  graphLayout.ts
frontend/src/components/shared/: SendToTerminalButtons.tsx
frontend/src/components/ui/: Badge.tsx  Banner.tsx  Button.tsx  GlassPanel.tsx  Input.tsx  Modal.tsx  StatusDot.tsx  Tabs.tsx
frontend/src/hooks/: useApiClient.ts  useAuth.tsx  useClickOutside.ts  useDebouncedValue.ts  useDragAndDrop.ts  useDraggablePanel.ts  useLocalStorageDraft.ts  useMediaQuery.ts  useMentionInput.ts  usePrompts.ts  useSessionSummary.ts  useTerminalSocket.ts  useTheme.tsx
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx  SessionDetail.tsx  TerminalWindow.tsx
frontend/src/utils/: promptResolver.ts  relativeDate.ts  sessionStatus.ts
scripts/: check-node.sh  ensure-path.sh
scripts/eval/engines/: v10.py  v11.py  v12.py  v13.py  v14.py  v15.py  v16.py  v17.py  v18.py  v19.py  v3.py  v5.py  v6.py  v7.py  v8.py  v9.py
slides/: package-lock.json  package.json  slides.md  vite.config.js
test/: debug-vm.sh  e2e-vm-rocky.sh  e2e-vm.sh
test/e2e/: conftest.py  requirements.txt  test_ai.py  test_auth.py  test_directories.py  test_error_handling.py  test_etag_caching.py  test_files.py  test_git.py  test_git_advanced.py  test_git_mutations.py  test_health.py  test_message_buffer.py  test_prompts.py  test_scratchpad.py  test_session_lifecycle.py  test_sessions.py  test_settings.py  test_shared.py  test_status_endpoints.py  test_todos.py  test_version.py
test/e2e-ui/: test_dashboard.py  test_dashboard_extended.py  test_scratchpad.py
test/e2e-ui/features/: dashboard.feature  dashboard_extended.feature  session_scratchpad.feature
