[project]
name = "lumbergh"
dynamic = ["version"]
description = "Tmux session supervisor backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "libtmux",
    "tinydb",
    "gitpython>=3.1",
    "httpx>=0.27",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
lumbergh = "lumbergh.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "lumbergh/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["lumbergh"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "A", "ARG", "B", "C4", "C90", "DTZ", "E", "F", "FAST", "FLY", "FURB",
    "I", "LOG", "N", "PERF", "PIE", "PT", "RET", "RUF", "S", "SIM", "TC", "UP", "W",
]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # function call in default argument (FastAPI Depends)
    "B904",    # raise from within except
    "S101",    # assert usage (fine in tests)
    "S104",    # bind to 0.0.0.0
    "S324",    # insecure hash (not used for crypto)
    "S603",    # subprocess call
    "S606",    # os.popen
    "S607",    # partial executable path
    "SIM105",  # contextlib.suppress
    "RUF012",  # mutable class attributes (pydantic models)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["lumbergh/tests"]
